Fixed z-index for navigation buttons

--- a/website/src/public/assets/css/screen.scss
+++ b/website/src/public/assets/css/screen.scss
@@ -118,6 +118,8 @@ body{
   }
 
   > footer{
+    position : relative;
+    z-index  : 11;
 
     ul{
       display         : flex;
